project("SLIM3D")

set(MATHS_SRCS_FILES
  )

set(MATHS_SRCS)
foreach (SRC_FILE ${MATHS_SRCS_FILES})
  set(MATHS_SRCS ${MATHS_SRCS} srcs/${SRC_FILE})
endforeach()

# add_library(slim3d-maths SHARED ${MATHS_SRCS})

install (DIRECTORY inc/ DESTINATION include)
# install (TARGETS slim3d-maths DESTINATION lib
#   PERMISSIONS WORLD_EXECUTE WORLD_READ GROUP_EXECUTE GROUP_READ OWNER_EXECUTE OWNER_READ OWNER_WRITE)
