project("SLIM3D")

set(TIME_SRCS_FILES
  Date.cpp
  )

set(TIME_SRCS)
foreach (SRC_FILE ${TIME_SRCS_FILES})
  set(TIME_SRCS ${TIME_SRCS} srcs/${SRC_FILE})
endforeach()

add_library(slim3d-time SHARED ${TIME_SRCS})

install (DIRECTORY inc/ DESTINATION include)
install (TARGETS slim3d-time DESTINATION lib
  PERMISSIONS WORLD_EXECUTE WORLD_READ GROUP_EXECUTE GROUP_READ OWNER_EXECUTE OWNER_READ OWNER_WRITE)
